# lifeGoals

./: .gitignore  package-lock.json  package.json
back/lifegoals/: manage.py  pyproject.toml
back/lifegoals/flows/: admin.py  models.py  serializer.py  urls.py  views.py
back/lifegoals/flows/migrations/: 0001_initial.py  0002_goal_duration.py  0002_remove_flow_edges_remove_flow_nodes_alter_node_name_and_more.py
back/lifegoals/lifegoals/: asgi.py  settings.py  urls.py  wsgi.py
front/: package-lock.json  package.json
front/src/: App.js  index.css
front/src/components/: Flows.js  GoalFlow.js  Trophy.js
front/src/components/nodes/: ActorNode.js  TrophyNode.js
front/src/components/pages/: Auth.js  Main.js
src/: App.js  index.css
src/components/: Flows.js  Stickman.js
src/components/nodes/: ActorNode.js  TrophyNode.js
