[tool.poetry]
name = "lifegoals"
version = "0.1.0"
description = ""
authors = ["kaf.ahmadi <kaf.ahmadi@tapsi.cab>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
